add: icon, change: name to vscode-bun

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bunn",
+  "name": "vscode-bunn",
   "displayName": "Bunn",
   "description": "Extension that support Bunjs development",
   "license": "MIT",
